// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot: shDecom6_2 → INET C++ > pM1 1`] = `
[
  {
    "content": "// Generated by wsn-codegen from the Event-B machine pM1.
// Do not edit by hand — regenerate instead.
#pragma once
#include <algorithm>
#include <map>
#include <set>
#include <utility>
#include "inet/applications/base/ApplicationBase.h"
#include "inet/common/Protocol.h"
#include "inet/common/lifecycle/LifecycleOperation.h"
#include "inet/common/lifecycle/NodeStatus.h"
#include "inet/common/packet/Packet.h"
#include "inet/networklayer/common/L3Address.h"
#include "inet/networklayer/contract/INetworkSocket.h"

using namespace inet;

namespace eb_pm1app {
// ── Event-B context (derived from no context files supplied) ──
// Inlined so the generated module is self-contained: the tool's output is
// exactly \`.h/.cc/.ned\`. Two generated modules with DIFFERENT contexts must not
// be linked into one executable — these are inline definitions at namespace
// scope and would collide.
using Node  = int;   // element label of the node carrier
using PktId = int;   // element label of the packet carrier
using Data  = int;   // ℤ payload values
inline constexpr bool FALSE = false, TRUE = true;

// Values an axiom pins:
inline const int DATA = 0;  // no partition axiom found — default tag
inline std::set<int> CONTROL = {1};  // no partition axiom found — default tag
inline const int CTL_VAL = 0;  // no axiom found — default

// ⚠ Declared only — the axioms give properties, not elements. The simulation
// harness must populate these before any generated event method runs, or
// \`.at()\` throws std::out_of_range.
inline std::set<int> ND;  // not in the supplied context — harness-populated
inline std::set<int> Dests;  // not in the supplied context — harness-populated
inline std::map<PktId, Node> initialSrcAddr;  // not in the supplied context
inline std::map<PktId, Node> finalDestAddr;  // not in the supplied context
inline std::map<PktId, int> type;  // not in the supplied context

// Pair-set domain/range membership (a relation keeps no separate key index).
template<class R> bool inDom(const R& r, Node x) {
  return std::any_of(r.begin(), r.end(), [&](const auto& p){ return p.first == x; });
}
template<class R> bool inRan(const R& r, PktId y) {
  return std::any_of(r.begin(), r.end(), [&](const auto& p){ return p.second == y; });
}

// Module shell modelled on INET's SensorApp (inet/applications/sensorapp).
// The model's CommPattern pair is emitted under SensorApp's names (thesis
// S4/S5): Event-B send_down → sendSensorPacket(...) carrying the transmit
// structure, Event-B send_up → a socketDataArrived(...) model overload
// carrying the receive accounting; every other event keeps its Event-B name
// and pure translation-rules body. A model without the pair gets SensorApp's
// own sendSensorPacket() instead. Binding the model identities (which
// node/packet a simulation message is) happens at the marked extension points
// in handleMessageWhenUp() and the socket-callback socketDataArrived().
class Pm1App : public ApplicationBase, public INetworkSocket::ICallback {
  protected:
    // ── Event-B machine state ──
    std::map<PktId, Node> pktFwdr;
    std::map<PktId, Data> pktData;
    std::set<PktId> createdPkts;
    std::set<std::pair<Node, PktId>> ndBuff;
    std::set<std::pair<Node, PktId>> sentUp;
    std::set<std::pair<Node, PktId>> sentDown;
    std::map<PktId, std::set<Node>> ctlNeighbours;
    std::set<std::pair<Node, PktId>> destBuff;
    std::set<std::pair<Node, PktId>> recvBuff;
    std::set<std::pair<Node, PktId>> clrRecvBuffFlg;

    // ── SensorApp shell: parameters (read in initialize / openSocket) ──
    L3Address sinkAddress;
    cPar *sensingIntervalPar = nullptr;
    int payloadLength = 0;
    simtime_t startTime;
    simtime_t stopTime;

    // ── SensorApp shell: state ──
    INetworkSocket *socket = nullptr;
    cMessage *timer = nullptr;
    NodeStatus *nodeStatus = nullptr;
    long sendSeqNo = 0;
    long sentCount = 0;
    long receivedCount = 0;

    // ── statistics ──
    static simsignal_t packetSentSignal;
    static simsignal_t packetReceivedSignal;

  protected:
    void initialize(int stage) override;
    int numInitStages() const override { return NUM_INIT_STAGES; }
    void handleMessageWhenUp(cMessage *msg) override;
    void finish() override;
    void refreshDisplay() const override;

    // SensorApp shell helpers
    virtual void openSocket();
    // Baseline SensorApp transmit, driven by the sensing timer. Overloads the
    // model's bool sendSensorPacket(Node, PktId) below (Event-B: send_down),
    // which stays for the network-layer phase: its guard chain needs the model
    // identities bound and the context populated before it can fire.
    virtual void sendSensorPacket();
    virtual void scheduleNextSensing(simtime_t previous);
    virtual void cancelNextSensing();
    virtual bool isEnabled();

    // ApplicationBase lifecycle
    void handleStartOperation(LifecycleOperation *operation) override;
    void handleStopOperation(LifecycleOperation *operation) override;
    void handleCrashOperation(LifecycleOperation *operation) override;

    // INetworkSocket::ICallback
    void socketDataArrived(INetworkSocket *socket, Packet *packet) override;
    void socketClosed(INetworkSocket *socket) override;

    // These Event-B event names also name a base-class method. Keep the model's
    // name, but re-expose the base overloads so they are not hidden
    // (-Woverloaded-virtual); overload resolution still picks the right one.
    using omnetpp::cSimpleModule::receive;

    // Event-B events, one guarded bool method each: the guards are checked
    // first (early return), then the actions run.
    bool creatingPkt(Node x, int des, PktId pkt, Data data);
    bool start_tx(Node x, PktId pkt);
    bool sendSensorPacket(Node x, PktId pkt);   // Event-B: send_down
    bool socketDataArrived(Node x, PktId pkt, const std::set<Node>& nbrs);   // Event-B: send_up
    bool receive(Node nb, PktId pkt);
    bool clear_recvdBuff(Node nb, PktId pkt);
    bool fwdr_receive_pkt(Node nb, PktId pkt);
    bool dest_recv_pkt(Node nb, PktId pkt);
    bool finish_tx_pkt(Node x, PktId pkt);
    bool final_tx_pkt(PktId pkt);

  public:
    Pm1App();
    virtual ~Pm1App();
};

}  // namespace eb_pm1app
",
    "path": "Pm1App.h",
  },
  {
    "content": "// Generated by wsn-codegen from the Event-B machine pM1.
// Do not edit by hand — regenerate instead.
#include "Pm1App.h"

#include "inet/common/ModuleAccess.h"
#include "inet/common/Protocol.h"
#include "inet/common/ProtocolTag_m.h"
#include "inet/common/lifecycle/ModuleOperations.h"
#include "inet/common/packet/chunk/ByteCountChunk.h"
#include "inet/networklayer/common/L3AddressResolver.h"
#include "inet/networklayer/common/L3AddressTag_m.h"
#include "inet/networklayer/contract/L3Socket.h"
#include "inet/networklayer/contract/ipv4/Ipv4Socket.h"
#include "inet/networklayer/contract/ipv6/Ipv6Socket.h"

namespace eb_pm1app {
Define_Module(Pm1App);

simsignal_t Pm1App::packetSentSignal = registerSignal("packetSent");
simsignal_t Pm1App::packetReceivedSignal = registerSignal("packetReceived");

// Event-B INITIALISATION.
Pm1App::Pm1App() {
    pktFwdr.clear();
    pktData.clear();
    createdPkts.clear();
    ndBuff.clear();
    sentUp.clear();
    sentDown.clear();
    ctlNeighbours.clear();
    destBuff.clear();
    recvBuff.clear();
    clrRecvBuffFlg.clear();
}

Pm1App::~Pm1App() {
    cancelAndDelete(timer);
    delete socket;
}

void Pm1App::initialize(int stage) {
    ApplicationBase::initialize(stage);
    if (stage == INITSTAGE_LOCAL) {
        sensingIntervalPar = &par("sensingInterval");
        payloadLength = par("payloadLength");
        startTime = par("startTime");
        stopTime = par("stopTime");
        if (stopTime >= SIMTIME_ZERO && stopTime < startTime)
            throw cRuntimeError("Invalid startTime/stopTime parameters");

        sendSeqNo = sentCount = receivedCount = 0;
        WATCH(sendSeqNo);
        WATCH(sentCount);
        WATCH(receivedCount);
        timer = new cMessage("sensingTimer");
    }
}

bool Pm1App::isEnabled() {
    // the module emits packets only when a destination is configured
    return par("sinkAddress").stringValue()[0] != '\\0';
}

void Pm1App::openSocket() {
    // Resolve the sink lazily (it may stay empty on a passive sink-side node).
    const char *sinkStr = par("sinkAddress");
    if (sinkStr[0])
        sinkAddress = L3AddressResolver().resolve(sinkStr);

    // Determine the network-layer protocol below us. An explicit parameter
    // wins; otherwise infer it from the resolved address type, so a node with
    // a destination but no configured protocol still opens a socket.
    const Protocol *networkProtocol = nullptr;
    const char *netProtoStr = par("networkProtocol");
    if (*netProtoStr) {
        networkProtocol = Protocol::getProtocol(netProtoStr);
    }
    else if (!sinkAddress.isUnspecified()) {
        switch (sinkAddress.getType()) {
            case L3Address::IPv4: networkProtocol = &Protocol::ipv4; break;
            case L3Address::IPv6: networkProtocol = &Protocol::ipv6; break;
            case L3Address::MODULEID:
            case L3Address::MODULEPATH: networkProtocol = &Protocol::nextHopForwarding; break;
            default:
                throw cRuntimeError("Pm1App: cannot infer networkProtocol from address type %d",
                                    (int)sinkAddress.getType());
        }
    }
    else {
        // no destination and no explicit protocol: nothing to open
        EV_INFO << "Pm1App: passive mode without a networkProtocol parameter; not opening socket\\n";
        return;
    }

    // Create the matching socket type; L3Socket carries an arbitrary payload.
    if (networkProtocol == &Protocol::ipv4)
        socket = new Ipv4Socket(gate("socketOut"));
    else if (networkProtocol == &Protocol::ipv6)
        socket = new Ipv6Socket(gate("socketOut"));
    else
        socket = new L3Socket(networkProtocol, gate("socketOut"));
    socket->bind(&Protocol::manet, L3Address());
    socket->setCallback(this);
}

// Send-down flow: build one packet and hand it down to the network layer
// through the socket (same as SensorApp). Driven by the sensing timer.
// The model's bool sendSensorPacket(Node, PktId) below (Event-B: send_down)
// carries the same transmit structure under its guard chain; it stays unwired
// until the network-layer phase binds the model identities.
void Pm1App::sendSensorPacket() {
    if (sinkAddress.isUnspecified() || socket == nullptr) {
        EV_WARN << "Pm1App: sinkAddress unspecified, skipping send\\n";
        return;
    }

    char name[32];
    snprintf(name, sizeof(name), "sensor-%ld", sendSeqNo);

    Packet *packet = new Packet(name);
    auto payload = makeShared<ByteCountChunk>(B(payloadLength));
    packet->insertAtBack(payload);

    packet->addTag<PacketProtocolTag>()->setProtocol(&Protocol::manet);
    auto addrReq = packet->addTag<L3AddressReq>();
    addrReq->setDestAddress(sinkAddress);

    EV_INFO << "Pm1App: sending sample #" << sendSeqNo
            << " (" << payloadLength << "B) to " << sinkAddress << endl;

    emit(packetSentSignal, packet);
    socket->send(packet);

    sendSeqNo++;
    sentCount++;
}

void Pm1App::scheduleNextSensing(simtime_t previous) {
    simtime_t next;
    if (previous < SIMTIME_ZERO)
        next = simTime() <= startTime ? startTime : simTime();
    else
        next = previous + *sensingIntervalPar;
    if (stopTime < SIMTIME_ZERO || next < stopTime)
        scheduleAt(next, timer);
}

void Pm1App::cancelNextSensing() {
    cancelEvent(timer);
}

void Pm1App::handleMessageWhenUp(cMessage *msg) {
    if (msg->isSelfMessage()) {
        ASSERT(msg == timer);
        sendSensorPacket();
        // EXTENSION POINT (send-down flow): to drive the transmission from the
        // model instead, bind the identities and call start_tx(x, pkt) then
        // sendSensorPacket(x, pkt) (Event-B: send_down) here — that path also
        // needs the context populated (see the header).
        scheduleNextSensing(simTime());
    }
    else if (socket && socket->belongsToSocket(msg)) {
        socket->processMessage(msg);   // delivered to socketDataArrived
    }
    else {
        EV_WARN << "Pm1App: dropping unaccepted message " << msg->getName()
                << " (" << msg->getClassName() << ")\\n";
        delete msg;
    }
}

// Send-up flow: a packet the network layer sent up arrives here via
// handleMessageWhenUp → socket (same as SensorApp).
void Pm1App::socketDataArrived(INetworkSocket *, Packet *packet) {
    // EXTENSION POINT (send-up flow): to let the model consume the delivery,
    // bind the identities and call socketDataArrived(x, pkt, nbrs) (Event-B:
    // send_up) here. That overload keeps its own receivedCount++, so wiring it
    // in means dropping the one below or the receive count doubles.

    EV_INFO << "Pm1App: received " << packet->getByteLength()
            << "B from " << packet->getTag<L3AddressInd>()->getSrcAddress() << endl;
    receivedCount++;
    emit(packetReceivedSignal, packet);
    delete packet;
}

void Pm1App::socketClosed(INetworkSocket *) {}

void Pm1App::handleStartOperation(LifecycleOperation *) {
    openSocket();
    if (isEnabled() && !sinkAddress.isUnspecified())
        scheduleNextSensing(-1);
}

void Pm1App::handleStopOperation(LifecycleOperation *) {
    cancelNextSensing();
    if (socket && socket->isOpen())
        socket->close();
    delayActiveOperationFinish(par("stopOperationTimeout"));
}

void Pm1App::handleCrashOperation(LifecycleOperation *operation) {
    cancelNextSensing();
    if (socket && operation->getRootModule() != getContainingNode(this))
        socket->destroy();
}

void Pm1App::refreshDisplay() const {
    ApplicationBase::refreshDisplay();
    char buf[48];
    snprintf(buf, sizeof(buf), "sent: %ld\\nrcvd: %ld", sentCount, receivedCount);
    getDisplayString().setTagArg("t", 0, buf);
}

void Pm1App::finish() {
    recordScalar("packets sent", sentCount);
    recordScalar("packets received", receivedCount);
}

bool Pm1App::creatingPkt(Node x, int des, PktId pkt, Data data) {
    if (!((ND.count(x) > 0 && Dests.count(x) == 0)))
        return false;
    if (!(x == initialSrcAddr.at(pkt)))
        return false;
    if (!(des == finalDestAddr.at(pkt)))
        return false;
    if (!(pktFwdr.count(pkt) == 0))
        return false;
    if (!(pktData.count(pkt) == 0))
        return false;
    if (!(ndBuff.count({x, pkt}) == 0))
        return false;
    createdPkts.insert(pkt);
    pktFwdr[pkt] = x;
    pktData[pkt] = data;
    ndBuff.insert({x, pkt});
    return true;
}

bool Pm1App::start_tx(Node x, PktId pkt) {
    if (!(sentDown.count({x, pkt}) == 0))
        return false;
    if (!(sentUp.count({x, pkt}) == 0))
        return false;
    if (!(pktFwdr.count(pkt) > 0))
        return false;
    if (!(ndBuff.count({x, pkt}) > 0))
        return false;
    sentDown.insert({x, pkt});
    pktFwdr[pkt] = x;
    ndBuff.erase({x, pkt});
    return true;
}

// Event-B: send_down — emitted under its SensorApp name (thesis S4, transmit).
bool Pm1App::sendSensorPacket(Node x, PktId pkt) {
    if (!(sentDown.count({x, pkt}) > 0))
        return false;
    // — SensorApp transmit structure (SensorApp::sendSensorPacket) —
    if (socket == nullptr || sinkAddress.isUnspecified()) {
        EV_WARN << "socket/sinkAddress not ready, skipping send\\n";
        return false;
    }
    char pktName[32];
    snprintf(pktName, sizeof(pktName), "sensor-%ld", sendSeqNo);
    Packet *packet = new Packet(pktName);
    auto payload = makeShared<ByteCountChunk>(B(payloadLength));
    packet->insertAtBack(payload);
    packet->addTag<PacketProtocolTag>()->setProtocol(&Protocol::manet);
    packet->addTag<L3AddressReq>()->setDestAddress(sinkAddress);
    emit(packetSentSignal, packet);
    socket->send(packet);
    sendSeqNo++;
    sentCount++;
    return true;
}

// Event-B: send_up — emitted under its SensorApp name (thesis S5, receive).
bool Pm1App::socketDataArrived(Node x, PktId pkt, const std::set<Node>& nbrs) {
    if (!(sentUp.count({x, pkt}) == 0))
        return false;
    if (!(sentDown.count({x, pkt}) > 0))
        return false;
    if (!(ctlNeighbours.count(pkt) == 0))
        return false;
    if (!(!nbrs.empty()))
        return false;
    // — SensorApp receive structure (accounting; the packet object itself
    //   is handled in socketDataArrived, which calls this event) —
    receivedCount++;
    for (auto _v : nbrs) ctlNeighbours[pkt].insert(_v);
    sentDown.erase({x, pkt});
    sentUp.insert({x, pkt});
    return true;
}

bool Pm1App::receive(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) == 0))
        return false;
    if (!(sentUp.count({nb, pkt}) == 0))
        return false;
    if (!(sentDown.count({nb, pkt}) == 0))
        return false;
    recvBuff.insert({nb, pkt});
    ctlNeighbours[pkt].erase(nb); if (ctlNeighbours[pkt].empty()) ctlNeighbours.erase(pkt);
    return true;
}

bool Pm1App::clear_recvdBuff(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0))
        return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) > 0))
        return false;
    recvBuff.erase({nb, pkt});
    return true;
}

bool Pm1App::fwdr_receive_pkt(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0))
        return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) == 0))
        return false;
    if (!(Dests.count(nb) == 0))
        return false;
    if (!(ndBuff.count({nb, pkt}) == 0))
        return false;
    clrRecvBuffFlg.insert({nb, pkt});
    ndBuff.insert({nb, pkt});
    return true;
}

bool Pm1App::dest_recv_pkt(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0))
        return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) == 0))
        return false;
    if (!(destBuff.count({nb, pkt}) == 0))
        return false;
    destBuff.insert({nb, pkt});
    clrRecvBuffFlg.insert({nb, pkt});
    return true;
}

bool Pm1App::finish_tx_pkt(Node x, PktId pkt) {
    if (!((ctlNeighbours.count(pkt) == 0 || ctlNeighbours.at(pkt).empty())))
        return false;
    if (!(inRan(sentUp, pkt)))
        return false;
    if (!(!inRan(sentDown, pkt)))
        return false;
    if (!(inDom(sentUp, x)))
        return false;
    if (!(sentUp.count({x, pkt}) > 0))
        return false;
    if (!(inRan(ndBuff, pkt)))
        return false;
    sentUp.erase({x, pkt});
    return true;
}

bool Pm1App::final_tx_pkt(PktId pkt) {
    if (!((ctlNeighbours.count(pkt) == 0 || ctlNeighbours.at(pkt).empty())))
        return false;
    if (!(inRan(sentUp, pkt)))
        return false;
    if (!(!inRan(sentDown, pkt)))
        return false;
    if (!(!inRan(ndBuff, pkt)))
        return false;
    for (auto it = sentUp.begin(); it != sentUp.end(); ) it->second == pkt ? it = sentUp.erase(it) : ++it;
    return true;
}

}  // namespace eb_pm1app
",
    "path": "Pm1App.cc",
  },
  {
    "content": "import inet.applications.contract.IApp;

//
// Pm1App — Generated by wsn-codegen from the Event-B machine pM1.
// Do not edit by hand — regenerate instead.
// Shell modelled on INET's SensorApp: periodic sensing traffic toward
// sinkAddress over the bound networkProtocol. The C++ class binds via
// @class below.
//
simple Pm1App like IApp
{
    parameters:
        @class(eb_pm1app::Pm1App);
        string sinkAddress = default("");         // destination; empty = passive (sink-side) node
        volatile double sensingInterval @unit(s) = default(1s);
        int payloadLength @unit(B) = default(10B);
        double startTime @unit(s) = default(uniform(0s, this.sensingInterval));
        double stopTime @unit(s) = default(-1s);  // negative: run forever
        string networkProtocol = default("");     // L3 protocol to bind; empty = no socket
        double stopOperationExtraTime @unit(s) = default(-1s);
        double stopOperationTimeout @unit(s) = default(2s);
        @display("i=block/app");
        @lifecycleSupport;
        @signal[packetSent](type=inet::Packet);
        @signal[packetReceived](type=inet::Packet);
        @statistic[packetSent](title="packets sent"; source=packetSent; record=count,"sum(packetBytes)","vector(packetBytes)"; interpolationmode=none);
        @statistic[packetReceived](title="packets received"; source=packetReceived; record=count,"sum(packetBytes)","vector(packetBytes)"; interpolationmode=none);
    gates:
        input socketIn @labels(ITransportPacket/up);
        output socketOut @labels(ITransportPacket/down);
}
",
    "path": "Pm1App.ned",
  },
]
`;

exports[`snapshot: shDecom6_2 → INET C++ > pM3 1`] = `
[
  {
    "content": "// Generated by wsn-codegen from the Event-B refinement chain pM1 → uM2 → pM3 (merged into one module).
// Do not edit by hand — regenerate instead.
#pragma once
#include <algorithm>
#include <map>
#include <set>
#include <utility>
#include "inet/applications/base/ApplicationBase.h"
#include "inet/common/Protocol.h"
#include "inet/common/lifecycle/LifecycleOperation.h"
#include "inet/common/lifecycle/NodeStatus.h"
#include "inet/common/packet/Packet.h"
#include "inet/networklayer/common/L3Address.h"
#include "inet/networklayer/contract/INetworkSocket.h"

using namespace inet;

namespace eb_pm3app {
// ── Event-B context (derived from no context files supplied) ──
// Inlined so the generated module is self-contained: the tool's output is
// exactly \`.h/.cc/.ned\`. Two generated modules with DIFFERENT contexts must not
// be linked into one executable — these are inline definitions at namespace
// scope and would collide.
using Node  = int;   // element label of the node carrier
using PktId = int;   // element label of the packet carrier
using Data  = int;   // ℤ payload values
inline constexpr bool FALSE = false, TRUE = true;

// Values an axiom pins:
inline const int DATA = 0;  // no partition axiom found — default tag
inline std::set<int> CONTROL = {1};  // no partition axiom found — default tag
inline const int CTL_VAL = 0;  // no axiom found — default

// ⚠ Declared only — the axioms give properties, not elements. The simulation
// harness must populate these before any generated event method runs, or
// \`.at()\` throws std::out_of_range.
inline std::set<int> ND;  // not in the supplied context — harness-populated
inline std::set<int> Dests;  // not in the supplied context — harness-populated
inline std::map<PktId, Node> initialSrcAddr;  // not in the supplied context
inline std::map<PktId, Node> finalDestAddr;  // not in the supplied context
inline std::map<PktId, int> type;  // not in the supplied context

// Pair-set domain/range membership (a relation keeps no separate key index).
template<class R> bool inDom(const R& r, Node x) {
  return std::any_of(r.begin(), r.end(), [&](const auto& p){ return p.first == x; });
}
template<class R> bool inRan(const R& r, PktId y) {
  return std::any_of(r.begin(), r.end(), [&](const auto& p){ return p.second == y; });
}

// Module shell modelled on INET's SensorApp (inet/applications/sensorapp).
// The model's CommPattern pair is emitted under SensorApp's names (thesis
// S4/S5): Event-B send_down → sendSensorPacket(...) carrying the transmit
// structure, Event-B send_up → a socketDataArrived(...) model overload
// carrying the receive accounting; every other event keeps its Event-B name
// and pure translation-rules body. A model without the pair gets SensorApp's
// own sendSensorPacket() instead. Binding the model identities (which
// node/packet a simulation message is) happens at the marked extension points
// in handleMessageWhenUp() and the socket-callback socketDataArrived().
class Pm3App : public ApplicationBase, public INetworkSocket::ICallback {
  protected:
    // ── Event-B machine state ──
    std::map<PktId, Node> pktFwdr;
    std::map<PktId, Data> pktData;
    std::set<PktId> createdPkts;
    std::set<std::pair<Node, PktId>> ndBuff;
    std::set<std::pair<Node, PktId>> sentUp;
    std::set<std::pair<Node, PktId>> sentDown;
    std::map<PktId, std::set<Node>> ctlNeighbours;
    std::set<std::pair<Node, PktId>> destBuff;
    std::set<std::pair<Node, PktId>> recvBuff;
    std::set<std::pair<Node, PktId>> clrRecvBuffFlg;
    std::map<Node, bool> ctlSensedFlg;
    std::map<Node, std::set<Data>> senseBuff;

    // ── SensorApp shell: parameters (read in initialize / openSocket) ──
    L3Address sinkAddress;
    cPar *sensingIntervalPar = nullptr;
    int payloadLength = 0;
    simtime_t startTime;
    simtime_t stopTime;

    // ── SensorApp shell: state ──
    INetworkSocket *socket = nullptr;
    cMessage *timer = nullptr;
    NodeStatus *nodeStatus = nullptr;
    long sendSeqNo = 0;
    long sentCount = 0;
    long receivedCount = 0;

    // ── statistics ──
    static simsignal_t packetSentSignal;
    static simsignal_t packetReceivedSignal;

  protected:
    void initialize(int stage) override;
    int numInitStages() const override { return NUM_INIT_STAGES; }
    void handleMessageWhenUp(cMessage *msg) override;
    void finish() override;
    void refreshDisplay() const override;

    // SensorApp shell helpers
    virtual void openSocket();
    // Baseline SensorApp transmit, driven by the sensing timer. Overloads the
    // model's bool sendSensorPacket(Node, PktId) below (Event-B: send_down),
    // which stays for the network-layer phase: its guard chain needs the model
    // identities bound and the context populated before it can fire.
    virtual void sendSensorPacket();
    virtual void scheduleNextSensing(simtime_t previous);
    virtual void cancelNextSensing();
    virtual bool isEnabled();

    // ApplicationBase lifecycle
    void handleStartOperation(LifecycleOperation *operation) override;
    void handleStopOperation(LifecycleOperation *operation) override;
    void handleCrashOperation(LifecycleOperation *operation) override;

    // INetworkSocket::ICallback
    void socketDataArrived(INetworkSocket *socket, Packet *packet) override;
    void socketClosed(INetworkSocket *socket) override;

    // These Event-B event names also name a base-class method. Keep the model's
    // name, but re-expose the base overloads so they are not hidden
    // (-Woverloaded-virtual); overload resolution still picks the right one.
    using omnetpp::cSimpleModule::receive;

    // Event-B events, one guarded bool method each: the guards are checked
    // first (early return), then the actions run.
    bool sensing(Node x, bool sf, Data data);
    bool creatingDataPacket(Node x, int des, PktId pkt, Data data);
    bool creatingControlPacket(Node x, int des, PktId pkt, Data data);
    bool start_tx(Node x, PktId pkt);
    bool sendSensorPacket(Node x, PktId pkt);   // Event-B: send_down
    bool socketDataArrived(Node x, PktId pkt, const std::set<Node>& nbrs);   // Event-B: send_up
    bool receive(Node nb, PktId pkt);
    bool clear_recvdBuff(Node nb, PktId pkt);
    bool fwdr_receive_pkt(Node nb, PktId pkt);
    bool dest_recv_pkt(Node nb, PktId pkt);
    bool finish_tx_pkt(Node x, PktId pkt);
    bool final_tx_pkt(PktId pkt);

  public:
    Pm3App();
    virtual ~Pm3App();
};

}  // namespace eb_pm3app
",
    "path": "Pm3App.h",
  },
  {
    "content": "// Generated by wsn-codegen from the Event-B refinement chain pM1 → uM2 → pM3 (merged into one module).
// Do not edit by hand — regenerate instead.
#include "Pm3App.h"

#include "inet/common/ModuleAccess.h"
#include "inet/common/Protocol.h"
#include "inet/common/ProtocolTag_m.h"
#include "inet/common/lifecycle/ModuleOperations.h"
#include "inet/common/packet/chunk/ByteCountChunk.h"
#include "inet/networklayer/common/L3AddressResolver.h"
#include "inet/networklayer/common/L3AddressTag_m.h"
#include "inet/networklayer/contract/L3Socket.h"
#include "inet/networklayer/contract/ipv4/Ipv4Socket.h"
#include "inet/networklayer/contract/ipv6/Ipv6Socket.h"

namespace eb_pm3app {
Define_Module(Pm3App);

simsignal_t Pm3App::packetSentSignal = registerSignal("packetSent");
simsignal_t Pm3App::packetReceivedSignal = registerSignal("packetReceived");

// Event-B INITIALISATION.
Pm3App::Pm3App() {
    pktFwdr.clear();
    pktData.clear();
    createdPkts.clear();
    ndBuff.clear();
    sentUp.clear();
    sentDown.clear();
    ctlNeighbours.clear();
    destBuff.clear();
    recvBuff.clear();
    clrRecvBuffFlg.clear();
    for (int _n : ND) if (Dests.count(_n) == 0) ctlSensedFlg[_n] = FALSE;
    for (int _n : ND) if (Dests.count(_n) == 0) senseBuff[_n] = {};
}

Pm3App::~Pm3App() {
    cancelAndDelete(timer);
    delete socket;
}

void Pm3App::initialize(int stage) {
    ApplicationBase::initialize(stage);
    if (stage == INITSTAGE_LOCAL) {
        sensingIntervalPar = &par("sensingInterval");
        payloadLength = par("payloadLength");
        startTime = par("startTime");
        stopTime = par("stopTime");
        if (stopTime >= SIMTIME_ZERO && stopTime < startTime)
            throw cRuntimeError("Invalid startTime/stopTime parameters");

        sendSeqNo = sentCount = receivedCount = 0;
        WATCH(sendSeqNo);
        WATCH(sentCount);
        WATCH(receivedCount);
        timer = new cMessage("sensingTimer");
    }
}

bool Pm3App::isEnabled() {
    // the module emits packets only when a destination is configured
    return par("sinkAddress").stringValue()[0] != '\\0';
}

void Pm3App::openSocket() {
    // Resolve the sink lazily (it may stay empty on a passive sink-side node).
    const char *sinkStr = par("sinkAddress");
    if (sinkStr[0])
        sinkAddress = L3AddressResolver().resolve(sinkStr);

    // Determine the network-layer protocol below us. An explicit parameter
    // wins; otherwise infer it from the resolved address type, so a node with
    // a destination but no configured protocol still opens a socket.
    const Protocol *networkProtocol = nullptr;
    const char *netProtoStr = par("networkProtocol");
    if (*netProtoStr) {
        networkProtocol = Protocol::getProtocol(netProtoStr);
    }
    else if (!sinkAddress.isUnspecified()) {
        switch (sinkAddress.getType()) {
            case L3Address::IPv4: networkProtocol = &Protocol::ipv4; break;
            case L3Address::IPv6: networkProtocol = &Protocol::ipv6; break;
            case L3Address::MODULEID:
            case L3Address::MODULEPATH: networkProtocol = &Protocol::nextHopForwarding; break;
            default:
                throw cRuntimeError("Pm3App: cannot infer networkProtocol from address type %d",
                                    (int)sinkAddress.getType());
        }
    }
    else {
        // no destination and no explicit protocol: nothing to open
        EV_INFO << "Pm3App: passive mode without a networkProtocol parameter; not opening socket\\n";
        return;
    }

    // Create the matching socket type; L3Socket carries an arbitrary payload.
    if (networkProtocol == &Protocol::ipv4)
        socket = new Ipv4Socket(gate("socketOut"));
    else if (networkProtocol == &Protocol::ipv6)
        socket = new Ipv6Socket(gate("socketOut"));
    else
        socket = new L3Socket(networkProtocol, gate("socketOut"));
    socket->bind(&Protocol::manet, L3Address());
    socket->setCallback(this);
}

// Send-down flow: build one packet and hand it down to the network layer
// through the socket (same as SensorApp). Driven by the sensing timer.
// The model's bool sendSensorPacket(Node, PktId) below (Event-B: send_down)
// carries the same transmit structure under its guard chain; it stays unwired
// until the network-layer phase binds the model identities.
void Pm3App::sendSensorPacket() {
    if (sinkAddress.isUnspecified() || socket == nullptr) {
        EV_WARN << "Pm3App: sinkAddress unspecified, skipping send\\n";
        return;
    }

    char name[32];
    snprintf(name, sizeof(name), "sensor-%ld", sendSeqNo);

    Packet *packet = new Packet(name);
    auto payload = makeShared<ByteCountChunk>(B(payloadLength));
    packet->insertAtBack(payload);

    packet->addTag<PacketProtocolTag>()->setProtocol(&Protocol::manet);
    auto addrReq = packet->addTag<L3AddressReq>();
    addrReq->setDestAddress(sinkAddress);

    EV_INFO << "Pm3App: sending sample #" << sendSeqNo
            << " (" << payloadLength << "B) to " << sinkAddress << endl;

    emit(packetSentSignal, packet);
    socket->send(packet);

    sendSeqNo++;
    sentCount++;
}

void Pm3App::scheduleNextSensing(simtime_t previous) {
    simtime_t next;
    if (previous < SIMTIME_ZERO)
        next = simTime() <= startTime ? startTime : simTime();
    else
        next = previous + *sensingIntervalPar;
    if (stopTime < SIMTIME_ZERO || next < stopTime)
        scheduleAt(next, timer);
}

void Pm3App::cancelNextSensing() {
    cancelEvent(timer);
}

void Pm3App::handleMessageWhenUp(cMessage *msg) {
    if (msg->isSelfMessage()) {
        ASSERT(msg == timer);
        sendSensorPacket();
        // EXTENSION POINT (send-down flow): to drive the transmission from the
        // model instead, bind the identities and call start_tx(x, pkt) then
        // sendSensorPacket(x, pkt) (Event-B: send_down) here — that path also
        // needs the context populated (see the header).
        scheduleNextSensing(simTime());
    }
    else if (socket && socket->belongsToSocket(msg)) {
        socket->processMessage(msg);   // delivered to socketDataArrived
    }
    else {
        EV_WARN << "Pm3App: dropping unaccepted message " << msg->getName()
                << " (" << msg->getClassName() << ")\\n";
        delete msg;
    }
}

// Send-up flow: a packet the network layer sent up arrives here via
// handleMessageWhenUp → socket (same as SensorApp).
void Pm3App::socketDataArrived(INetworkSocket *, Packet *packet) {
    // EXTENSION POINT (send-up flow): to let the model consume the delivery,
    // bind the identities and call socketDataArrived(x, pkt, nbrs) (Event-B:
    // send_up) here. That overload keeps its own receivedCount++, so wiring it
    // in means dropping the one below or the receive count doubles.

    EV_INFO << "Pm3App: received " << packet->getByteLength()
            << "B from " << packet->getTag<L3AddressInd>()->getSrcAddress() << endl;
    receivedCount++;
    emit(packetReceivedSignal, packet);
    delete packet;
}

void Pm3App::socketClosed(INetworkSocket *) {}

void Pm3App::handleStartOperation(LifecycleOperation *) {
    openSocket();
    if (isEnabled() && !sinkAddress.isUnspecified())
        scheduleNextSensing(-1);
}

void Pm3App::handleStopOperation(LifecycleOperation *) {
    cancelNextSensing();
    if (socket && socket->isOpen())
        socket->close();
    delayActiveOperationFinish(par("stopOperationTimeout"));
}

void Pm3App::handleCrashOperation(LifecycleOperation *operation) {
    cancelNextSensing();
    if (socket && operation->getRootModule() != getContainingNode(this))
        socket->destroy();
}

void Pm3App::refreshDisplay() const {
    ApplicationBase::refreshDisplay();
    char buf[48];
    snprintf(buf, sizeof(buf), "sent: %ld\\nrcvd: %ld", sentCount, receivedCount);
    getDisplayString().setTagArg("t", 0, buf);
}

void Pm3App::finish() {
    recordScalar("packets sent", sentCount);
    recordScalar("packets received", receivedCount);
}

bool Pm3App::sensing(Node x, bool sf, Data data) {
    if (!((ND.count(x) > 0 && Dests.count(x) == 0)))
        return false;
    if (!(ctlSensedFlg.count(x) > 0))
        return false;
    if (!(ctlSensedFlg.at(x) == FALSE))
        return false;
    ctlSensedFlg[x] = sf;
    senseBuff[x].insert(data);
    return true;
}

bool Pm3App::creatingDataPacket(Node x, int des, PktId pkt, Data data) {
    if (!((ND.count(x) > 0 && Dests.count(x) == 0)))
        return false;
    if (!(x == initialSrcAddr.at(pkt)))
        return false;
    if (!(des == finalDestAddr.at(pkt)))
        return false;
    if (!(pktFwdr.count(pkt) == 0))
        return false;
    if (!(pktData.count(pkt) == 0))
        return false;
    if (!(ndBuff.count({x, pkt}) == 0))
        return false;
    if (!(type.at(pkt) == DATA))
        return false;
    if (!(!senseBuff.empty()))
        return false;
    if (!((senseBuff.count(x) > 0 && senseBuff.at(x).count(data) > 0)))
        return false;
    createdPkts.insert(pkt);
    pktFwdr[pkt] = x;
    pktData[pkt] = data;
    ndBuff.insert({x, pkt});
    senseBuff[x].erase(data); if (senseBuff[x].empty()) senseBuff.erase(x);
    return true;
}

bool Pm3App::creatingControlPacket(Node x, int des, PktId pkt, Data data) {
    if (!((ND.count(x) > 0 && Dests.count(x) == 0)))
        return false;
    if (!(x == initialSrcAddr.at(pkt)))
        return false;
    if (!(des == finalDestAddr.at(pkt)))
        return false;
    if (!(pktFwdr.count(pkt) == 0))
        return false;
    if (!(pktData.count(pkt) == 0))
        return false;
    if (!(ndBuff.count({x, pkt}) == 0))
        return false;
    if (!(data == CTL_VAL))
        return false;
    if (!(CONTROL.count(type.at(pkt)) > 0))
        return false;
    createdPkts.insert(pkt);
    pktFwdr[pkt] = x;
    pktData[pkt] = data;
    ndBuff.insert({x, pkt});
    return true;
}

bool Pm3App::start_tx(Node x, PktId pkt) {
    if (!(sentDown.count({x, pkt}) == 0))
        return false;
    if (!(sentUp.count({x, pkt}) == 0))
        return false;
    if (!(pktFwdr.count(pkt) > 0))
        return false;
    if (!(ndBuff.count({x, pkt}) > 0))
        return false;
    sentDown.insert({x, pkt});
    pktFwdr[pkt] = x;
    ndBuff.erase({x, pkt});
    return true;
}

// Event-B: send_down — emitted under its SensorApp name (thesis S4, transmit).
bool Pm3App::sendSensorPacket(Node x, PktId pkt) {
    if (!(sentDown.count({x, pkt}) > 0))
        return false;
    // — SensorApp transmit structure (SensorApp::sendSensorPacket) —
    if (socket == nullptr || sinkAddress.isUnspecified()) {
        EV_WARN << "socket/sinkAddress not ready, skipping send\\n";
        return false;
    }
    char pktName[32];
    snprintf(pktName, sizeof(pktName), "sensor-%ld", sendSeqNo);
    Packet *packet = new Packet(pktName);
    auto payload = makeShared<ByteCountChunk>(B(payloadLength));
    packet->insertAtBack(payload);
    packet->addTag<PacketProtocolTag>()->setProtocol(&Protocol::manet);
    packet->addTag<L3AddressReq>()->setDestAddress(sinkAddress);
    emit(packetSentSignal, packet);
    socket->send(packet);
    sendSeqNo++;
    sentCount++;
    return true;
}

// Event-B: send_up — emitted under its SensorApp name (thesis S5, receive).
bool Pm3App::socketDataArrived(Node x, PktId pkt, const std::set<Node>& nbrs) {
    if (!(sentUp.count({x, pkt}) == 0))
        return false;
    if (!(sentDown.count({x, pkt}) > 0))
        return false;
    if (!(ctlNeighbours.count(pkt) == 0))
        return false;
    if (!(!nbrs.empty()))
        return false;
    // — SensorApp receive structure (accounting; the packet object itself
    //   is handled in socketDataArrived, which calls this event) —
    receivedCount++;
    for (auto _v : nbrs) ctlNeighbours[pkt].insert(_v);
    sentDown.erase({x, pkt});
    sentUp.insert({x, pkt});
    return true;
}

bool Pm3App::receive(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) == 0))
        return false;
    if (!(sentUp.count({nb, pkt}) == 0))
        return false;
    if (!(sentDown.count({nb, pkt}) == 0))
        return false;
    recvBuff.insert({nb, pkt});
    ctlNeighbours[pkt].erase(nb); if (ctlNeighbours[pkt].empty()) ctlNeighbours.erase(pkt);
    return true;
}

bool Pm3App::clear_recvdBuff(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0))
        return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) > 0))
        return false;
    recvBuff.erase({nb, pkt});
    return true;
}

bool Pm3App::fwdr_receive_pkt(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0))
        return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) == 0))
        return false;
    if (!(Dests.count(nb) == 0))
        return false;
    if (!(ndBuff.count({nb, pkt}) == 0))
        return false;
    clrRecvBuffFlg.insert({nb, pkt});
    ndBuff.insert({nb, pkt});
    return true;
}

bool Pm3App::dest_recv_pkt(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0))
        return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) == 0))
        return false;
    if (!(destBuff.count({nb, pkt}) == 0))
        return false;
    destBuff.insert({nb, pkt});
    clrRecvBuffFlg.insert({nb, pkt});
    return true;
}

bool Pm3App::finish_tx_pkt(Node x, PktId pkt) {
    if (!((ctlNeighbours.count(pkt) == 0 || ctlNeighbours.at(pkt).empty())))
        return false;
    if (!(inRan(sentUp, pkt)))
        return false;
    if (!(!inRan(sentDown, pkt)))
        return false;
    if (!(inDom(sentUp, x)))
        return false;
    if (!(sentUp.count({x, pkt}) > 0))
        return false;
    if (!(inRan(ndBuff, pkt)))
        return false;
    sentUp.erase({x, pkt});
    return true;
}

bool Pm3App::final_tx_pkt(PktId pkt) {
    if (!((ctlNeighbours.count(pkt) == 0 || ctlNeighbours.at(pkt).empty())))
        return false;
    if (!(inRan(sentUp, pkt)))
        return false;
    if (!(!inRan(sentDown, pkt)))
        return false;
    if (!(!inRan(ndBuff, pkt)))
        return false;
    for (auto it = sentUp.begin(); it != sentUp.end(); ) it->second == pkt ? it = sentUp.erase(it) : ++it;
    return true;
}

}  // namespace eb_pm3app
",
    "path": "Pm3App.cc",
  },
  {
    "content": "import inet.applications.contract.IApp;

//
// Pm3App — Generated by wsn-codegen from the Event-B refinement chain pM1 → uM2 → pM3 (merged into one module).
// Do not edit by hand — regenerate instead.
// Shell modelled on INET's SensorApp: periodic sensing traffic toward
// sinkAddress over the bound networkProtocol. The C++ class binds via
// @class below.
//
simple Pm3App like IApp
{
    parameters:
        @class(eb_pm3app::Pm3App);
        string sinkAddress = default("");         // destination; empty = passive (sink-side) node
        volatile double sensingInterval @unit(s) = default(1s);
        int payloadLength @unit(B) = default(10B);
        double startTime @unit(s) = default(uniform(0s, this.sensingInterval));
        double stopTime @unit(s) = default(-1s);  // negative: run forever
        string networkProtocol = default("");     // L3 protocol to bind; empty = no socket
        double stopOperationExtraTime @unit(s) = default(-1s);
        double stopOperationTimeout @unit(s) = default(2s);
        @display("i=block/app");
        @lifecycleSupport;
        @signal[packetSent](type=inet::Packet);
        @signal[packetReceived](type=inet::Packet);
        @statistic[packetSent](title="packets sent"; source=packetSent; record=count,"sum(packetBytes)","vector(packetBytes)"; interpolationmode=none);
        @statistic[packetReceived](title="packets received"; source=packetReceived; record=count,"sum(packetBytes)","vector(packetBytes)"; interpolationmode=none);
    gates:
        input socketIn @labels(ITransportPacket/up);
        output socketOut @labels(ITransportPacket/down);
}
",
    "path": "Pm3App.ned",
  },
]
`;

exports[`snapshot: shDecom6_2 → INET C++ > uM2 1`] = `
[
  {
    "content": "// Generated by wsn-codegen from the Event-B refinement chain pM1 → uM2 (merged into one module).
// Do not edit by hand — regenerate instead.
#pragma once
#include <algorithm>
#include <map>
#include <set>
#include <utility>
#include "inet/applications/base/ApplicationBase.h"
#include "inet/common/Protocol.h"
#include "inet/common/lifecycle/LifecycleOperation.h"
#include "inet/common/lifecycle/NodeStatus.h"
#include "inet/common/packet/Packet.h"
#include "inet/networklayer/common/L3Address.h"
#include "inet/networklayer/contract/INetworkSocket.h"

using namespace inet;

namespace eb_um2app {
// ── Event-B context (derived from no context files supplied) ──
// Inlined so the generated module is self-contained: the tool's output is
// exactly \`.h/.cc/.ned\`. Two generated modules with DIFFERENT contexts must not
// be linked into one executable — these are inline definitions at namespace
// scope and would collide.
using Node  = int;   // element label of the node carrier
using PktId = int;   // element label of the packet carrier
using Data  = int;   // ℤ payload values
inline constexpr bool FALSE = false, TRUE = true;

// Values an axiom pins:
inline const int DATA = 0;  // no partition axiom found — default tag
inline std::set<int> CONTROL = {1};  // no partition axiom found — default tag
inline const int CTL_VAL = 0;  // no axiom found — default

// ⚠ Declared only — the axioms give properties, not elements. The simulation
// harness must populate these before any generated event method runs, or
// \`.at()\` throws std::out_of_range.
inline std::set<int> ND;  // not in the supplied context — harness-populated
inline std::set<int> Dests;  // not in the supplied context — harness-populated
inline std::map<PktId, Node> initialSrcAddr;  // not in the supplied context
inline std::map<PktId, Node> finalDestAddr;  // not in the supplied context
inline std::map<PktId, int> type;  // not in the supplied context

// Pair-set domain/range membership (a relation keeps no separate key index).
template<class R> bool inDom(const R& r, Node x) {
  return std::any_of(r.begin(), r.end(), [&](const auto& p){ return p.first == x; });
}
template<class R> bool inRan(const R& r, PktId y) {
  return std::any_of(r.begin(), r.end(), [&](const auto& p){ return p.second == y; });
}

// Module shell modelled on INET's SensorApp (inet/applications/sensorapp).
// The model's CommPattern pair is emitted under SensorApp's names (thesis
// S4/S5): Event-B send_down → sendSensorPacket(...) carrying the transmit
// structure, Event-B send_up → a socketDataArrived(...) model overload
// carrying the receive accounting; every other event keeps its Event-B name
// and pure translation-rules body. A model without the pair gets SensorApp's
// own sendSensorPacket() instead. Binding the model identities (which
// node/packet a simulation message is) happens at the marked extension points
// in handleMessageWhenUp() and the socket-callback socketDataArrived().
class Um2App : public ApplicationBase, public INetworkSocket::ICallback {
  protected:
    // ── Event-B machine state ──
    std::map<PktId, Node> pktFwdr;
    std::map<PktId, Data> pktData;
    std::set<PktId> createdPkts;
    std::set<std::pair<Node, PktId>> ndBuff;
    std::set<std::pair<Node, PktId>> sentUp;
    std::set<std::pair<Node, PktId>> sentDown;
    std::map<PktId, std::set<Node>> ctlNeighbours;
    std::set<std::pair<Node, PktId>> destBuff;
    std::set<std::pair<Node, PktId>> recvBuff;
    std::set<std::pair<Node, PktId>> clrRecvBuffFlg;

    // ── SensorApp shell: parameters (read in initialize / openSocket) ──
    L3Address sinkAddress;
    cPar *sensingIntervalPar = nullptr;
    int payloadLength = 0;
    simtime_t startTime;
    simtime_t stopTime;

    // ── SensorApp shell: state ──
    INetworkSocket *socket = nullptr;
    cMessage *timer = nullptr;
    NodeStatus *nodeStatus = nullptr;
    long sendSeqNo = 0;
    long sentCount = 0;
    long receivedCount = 0;

    // ── statistics ──
    static simsignal_t packetSentSignal;
    static simsignal_t packetReceivedSignal;

  protected:
    void initialize(int stage) override;
    int numInitStages() const override { return NUM_INIT_STAGES; }
    void handleMessageWhenUp(cMessage *msg) override;
    void finish() override;
    void refreshDisplay() const override;

    // SensorApp shell helpers
    virtual void openSocket();
    // Baseline SensorApp transmit, driven by the sensing timer. Overloads the
    // model's bool sendSensorPacket(Node, PktId) below (Event-B: send_down),
    // which stays for the network-layer phase: its guard chain needs the model
    // identities bound and the context populated before it can fire.
    virtual void sendSensorPacket();
    virtual void scheduleNextSensing(simtime_t previous);
    virtual void cancelNextSensing();
    virtual bool isEnabled();

    // ApplicationBase lifecycle
    void handleStartOperation(LifecycleOperation *operation) override;
    void handleStopOperation(LifecycleOperation *operation) override;
    void handleCrashOperation(LifecycleOperation *operation) override;

    // INetworkSocket::ICallback
    void socketDataArrived(INetworkSocket *socket, Packet *packet) override;
    void socketClosed(INetworkSocket *socket) override;

    // These Event-B event names also name a base-class method. Keep the model's
    // name, but re-expose the base overloads so they are not hidden
    // (-Woverloaded-virtual); overload resolution still picks the right one.
    using omnetpp::cSimpleModule::receive;

    // Event-B events, one guarded bool method each: the guards are checked
    // first (early return), then the actions run.
    bool creatingControlPacket(Node x, int des, PktId pkt, Data data);
    bool start_tx(Node x, PktId pkt);
    bool sendSensorPacket(Node x, PktId pkt);   // Event-B: send_down
    bool socketDataArrived(Node x, PktId pkt, const std::set<Node>& nbrs);   // Event-B: send_up
    bool receive(Node nb, PktId pkt);
    bool clear_recvdBuff(Node nb, PktId pkt);
    bool fwdr_receive_pkt(Node nb, PktId pkt);
    bool dest_recv_pkt(Node nb, PktId pkt);
    bool finish_tx_pkt(Node x, PktId pkt);
    bool final_tx_pkt(PktId pkt);
    bool creatingDataPacket(Node x, int des, PktId pkt, Data data);

  public:
    Um2App();
    virtual ~Um2App();
};

}  // namespace eb_um2app
",
    "path": "Um2App.h",
  },
  {
    "content": "// Generated by wsn-codegen from the Event-B refinement chain pM1 → uM2 (merged into one module).
// Do not edit by hand — regenerate instead.
#include "Um2App.h"

#include "inet/common/ModuleAccess.h"
#include "inet/common/Protocol.h"
#include "inet/common/ProtocolTag_m.h"
#include "inet/common/lifecycle/ModuleOperations.h"
#include "inet/common/packet/chunk/ByteCountChunk.h"
#include "inet/networklayer/common/L3AddressResolver.h"
#include "inet/networklayer/common/L3AddressTag_m.h"
#include "inet/networklayer/contract/L3Socket.h"
#include "inet/networklayer/contract/ipv4/Ipv4Socket.h"
#include "inet/networklayer/contract/ipv6/Ipv6Socket.h"

namespace eb_um2app {
Define_Module(Um2App);

simsignal_t Um2App::packetSentSignal = registerSignal("packetSent");
simsignal_t Um2App::packetReceivedSignal = registerSignal("packetReceived");

// Event-B INITIALISATION.
Um2App::Um2App() {
    pktFwdr.clear();
    pktData.clear();
    createdPkts.clear();
    ndBuff.clear();
    sentUp.clear();
    sentDown.clear();
    ctlNeighbours.clear();
    destBuff.clear();
    recvBuff.clear();
    clrRecvBuffFlg.clear();
}

Um2App::~Um2App() {
    cancelAndDelete(timer);
    delete socket;
}

void Um2App::initialize(int stage) {
    ApplicationBase::initialize(stage);
    if (stage == INITSTAGE_LOCAL) {
        sensingIntervalPar = &par("sensingInterval");
        payloadLength = par("payloadLength");
        startTime = par("startTime");
        stopTime = par("stopTime");
        if (stopTime >= SIMTIME_ZERO && stopTime < startTime)
            throw cRuntimeError("Invalid startTime/stopTime parameters");

        sendSeqNo = sentCount = receivedCount = 0;
        WATCH(sendSeqNo);
        WATCH(sentCount);
        WATCH(receivedCount);
        timer = new cMessage("sensingTimer");
    }
}

bool Um2App::isEnabled() {
    // the module emits packets only when a destination is configured
    return par("sinkAddress").stringValue()[0] != '\\0';
}

void Um2App::openSocket() {
    // Resolve the sink lazily (it may stay empty on a passive sink-side node).
    const char *sinkStr = par("sinkAddress");
    if (sinkStr[0])
        sinkAddress = L3AddressResolver().resolve(sinkStr);

    // Determine the network-layer protocol below us. An explicit parameter
    // wins; otherwise infer it from the resolved address type, so a node with
    // a destination but no configured protocol still opens a socket.
    const Protocol *networkProtocol = nullptr;
    const char *netProtoStr = par("networkProtocol");
    if (*netProtoStr) {
        networkProtocol = Protocol::getProtocol(netProtoStr);
    }
    else if (!sinkAddress.isUnspecified()) {
        switch (sinkAddress.getType()) {
            case L3Address::IPv4: networkProtocol = &Protocol::ipv4; break;
            case L3Address::IPv6: networkProtocol = &Protocol::ipv6; break;
            case L3Address::MODULEID:
            case L3Address::MODULEPATH: networkProtocol = &Protocol::nextHopForwarding; break;
            default:
                throw cRuntimeError("Um2App: cannot infer networkProtocol from address type %d",
                                    (int)sinkAddress.getType());
        }
    }
    else {
        // no destination and no explicit protocol: nothing to open
        EV_INFO << "Um2App: passive mode without a networkProtocol parameter; not opening socket\\n";
        return;
    }

    // Create the matching socket type; L3Socket carries an arbitrary payload.
    if (networkProtocol == &Protocol::ipv4)
        socket = new Ipv4Socket(gate("socketOut"));
    else if (networkProtocol == &Protocol::ipv6)
        socket = new Ipv6Socket(gate("socketOut"));
    else
        socket = new L3Socket(networkProtocol, gate("socketOut"));
    socket->bind(&Protocol::manet, L3Address());
    socket->setCallback(this);
}

// Send-down flow: build one packet and hand it down to the network layer
// through the socket (same as SensorApp). Driven by the sensing timer.
// The model's bool sendSensorPacket(Node, PktId) below (Event-B: send_down)
// carries the same transmit structure under its guard chain; it stays unwired
// until the network-layer phase binds the model identities.
void Um2App::sendSensorPacket() {
    if (sinkAddress.isUnspecified() || socket == nullptr) {
        EV_WARN << "Um2App: sinkAddress unspecified, skipping send\\n";
        return;
    }

    char name[32];
    snprintf(name, sizeof(name), "sensor-%ld", sendSeqNo);

    Packet *packet = new Packet(name);
    auto payload = makeShared<ByteCountChunk>(B(payloadLength));
    packet->insertAtBack(payload);

    packet->addTag<PacketProtocolTag>()->setProtocol(&Protocol::manet);
    auto addrReq = packet->addTag<L3AddressReq>();
    addrReq->setDestAddress(sinkAddress);

    EV_INFO << "Um2App: sending sample #" << sendSeqNo
            << " (" << payloadLength << "B) to " << sinkAddress << endl;

    emit(packetSentSignal, packet);
    socket->send(packet);

    sendSeqNo++;
    sentCount++;
}

void Um2App::scheduleNextSensing(simtime_t previous) {
    simtime_t next;
    if (previous < SIMTIME_ZERO)
        next = simTime() <= startTime ? startTime : simTime();
    else
        next = previous + *sensingIntervalPar;
    if (stopTime < SIMTIME_ZERO || next < stopTime)
        scheduleAt(next, timer);
}

void Um2App::cancelNextSensing() {
    cancelEvent(timer);
}

void Um2App::handleMessageWhenUp(cMessage *msg) {
    if (msg->isSelfMessage()) {
        ASSERT(msg == timer);
        sendSensorPacket();
        // EXTENSION POINT (send-down flow): to drive the transmission from the
        // model instead, bind the identities and call start_tx(x, pkt) then
        // sendSensorPacket(x, pkt) (Event-B: send_down) here — that path also
        // needs the context populated (see the header).
        scheduleNextSensing(simTime());
    }
    else if (socket && socket->belongsToSocket(msg)) {
        socket->processMessage(msg);   // delivered to socketDataArrived
    }
    else {
        EV_WARN << "Um2App: dropping unaccepted message " << msg->getName()
                << " (" << msg->getClassName() << ")\\n";
        delete msg;
    }
}

// Send-up flow: a packet the network layer sent up arrives here via
// handleMessageWhenUp → socket (same as SensorApp).
void Um2App::socketDataArrived(INetworkSocket *, Packet *packet) {
    // EXTENSION POINT (send-up flow): to let the model consume the delivery,
    // bind the identities and call socketDataArrived(x, pkt, nbrs) (Event-B:
    // send_up) here. That overload keeps its own receivedCount++, so wiring it
    // in means dropping the one below or the receive count doubles.

    EV_INFO << "Um2App: received " << packet->getByteLength()
            << "B from " << packet->getTag<L3AddressInd>()->getSrcAddress() << endl;
    receivedCount++;
    emit(packetReceivedSignal, packet);
    delete packet;
}

void Um2App::socketClosed(INetworkSocket *) {}

void Um2App::handleStartOperation(LifecycleOperation *) {
    openSocket();
    if (isEnabled() && !sinkAddress.isUnspecified())
        scheduleNextSensing(-1);
}

void Um2App::handleStopOperation(LifecycleOperation *) {
    cancelNextSensing();
    if (socket && socket->isOpen())
        socket->close();
    delayActiveOperationFinish(par("stopOperationTimeout"));
}

void Um2App::handleCrashOperation(LifecycleOperation *operation) {
    cancelNextSensing();
    if (socket && operation->getRootModule() != getContainingNode(this))
        socket->destroy();
}

void Um2App::refreshDisplay() const {
    ApplicationBase::refreshDisplay();
    char buf[48];
    snprintf(buf, sizeof(buf), "sent: %ld\\nrcvd: %ld", sentCount, receivedCount);
    getDisplayString().setTagArg("t", 0, buf);
}

void Um2App::finish() {
    recordScalar("packets sent", sentCount);
    recordScalar("packets received", receivedCount);
}

bool Um2App::creatingControlPacket(Node x, int des, PktId pkt, Data data) {
    if (!((ND.count(x) > 0 && Dests.count(x) == 0)))
        return false;
    if (!(x == initialSrcAddr.at(pkt)))
        return false;
    if (!(des == finalDestAddr.at(pkt)))
        return false;
    if (!(pktFwdr.count(pkt) == 0))
        return false;
    if (!(pktData.count(pkt) == 0))
        return false;
    if (!(ndBuff.count({x, pkt}) == 0))
        return false;
    if (!(data == CTL_VAL))
        return false;
    if (!(CONTROL.count(type.at(pkt)) > 0))
        return false;
    createdPkts.insert(pkt);
    pktFwdr[pkt] = x;
    pktData[pkt] = data;
    ndBuff.insert({x, pkt});
    return true;
}

bool Um2App::start_tx(Node x, PktId pkt) {
    if (!(sentDown.count({x, pkt}) == 0))
        return false;
    if (!(sentUp.count({x, pkt}) == 0))
        return false;
    if (!(pktFwdr.count(pkt) > 0))
        return false;
    if (!(ndBuff.count({x, pkt}) > 0))
        return false;
    sentDown.insert({x, pkt});
    pktFwdr[pkt] = x;
    ndBuff.erase({x, pkt});
    return true;
}

// Event-B: send_down — emitted under its SensorApp name (thesis S4, transmit).
bool Um2App::sendSensorPacket(Node x, PktId pkt) {
    if (!(sentDown.count({x, pkt}) > 0))
        return false;
    // — SensorApp transmit structure (SensorApp::sendSensorPacket) —
    if (socket == nullptr || sinkAddress.isUnspecified()) {
        EV_WARN << "socket/sinkAddress not ready, skipping send\\n";
        return false;
    }
    char pktName[32];
    snprintf(pktName, sizeof(pktName), "sensor-%ld", sendSeqNo);
    Packet *packet = new Packet(pktName);
    auto payload = makeShared<ByteCountChunk>(B(payloadLength));
    packet->insertAtBack(payload);
    packet->addTag<PacketProtocolTag>()->setProtocol(&Protocol::manet);
    packet->addTag<L3AddressReq>()->setDestAddress(sinkAddress);
    emit(packetSentSignal, packet);
    socket->send(packet);
    sendSeqNo++;
    sentCount++;
    return true;
}

// Event-B: send_up — emitted under its SensorApp name (thesis S5, receive).
bool Um2App::socketDataArrived(Node x, PktId pkt, const std::set<Node>& nbrs) {
    if (!(sentUp.count({x, pkt}) == 0))
        return false;
    if (!(sentDown.count({x, pkt}) > 0))
        return false;
    if (!(ctlNeighbours.count(pkt) == 0))
        return false;
    if (!(!nbrs.empty()))
        return false;
    // — SensorApp receive structure (accounting; the packet object itself
    //   is handled in socketDataArrived, which calls this event) —
    receivedCount++;
    for (auto _v : nbrs) ctlNeighbours[pkt].insert(_v);
    sentDown.erase({x, pkt});
    sentUp.insert({x, pkt});
    return true;
}

bool Um2App::receive(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) == 0))
        return false;
    if (!(sentUp.count({nb, pkt}) == 0))
        return false;
    if (!(sentDown.count({nb, pkt}) == 0))
        return false;
    recvBuff.insert({nb, pkt});
    ctlNeighbours[pkt].erase(nb); if (ctlNeighbours[pkt].empty()) ctlNeighbours.erase(pkt);
    return true;
}

bool Um2App::clear_recvdBuff(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0))
        return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) > 0))
        return false;
    recvBuff.erase({nb, pkt});
    return true;
}

bool Um2App::fwdr_receive_pkt(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0))
        return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) == 0))
        return false;
    if (!(Dests.count(nb) == 0))
        return false;
    if (!(ndBuff.count({nb, pkt}) == 0))
        return false;
    clrRecvBuffFlg.insert({nb, pkt});
    ndBuff.insert({nb, pkt});
    return true;
}

bool Um2App::dest_recv_pkt(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0))
        return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) == 0))
        return false;
    if (!(destBuff.count({nb, pkt}) == 0))
        return false;
    destBuff.insert({nb, pkt});
    clrRecvBuffFlg.insert({nb, pkt});
    return true;
}

bool Um2App::finish_tx_pkt(Node x, PktId pkt) {
    if (!((ctlNeighbours.count(pkt) == 0 || ctlNeighbours.at(pkt).empty())))
        return false;
    if (!(inRan(sentUp, pkt)))
        return false;
    if (!(!inRan(sentDown, pkt)))
        return false;
    if (!(inDom(sentUp, x)))
        return false;
    if (!(sentUp.count({x, pkt}) > 0))
        return false;
    if (!(inRan(ndBuff, pkt)))
        return false;
    sentUp.erase({x, pkt});
    return true;
}

bool Um2App::final_tx_pkt(PktId pkt) {
    if (!((ctlNeighbours.count(pkt) == 0 || ctlNeighbours.at(pkt).empty())))
        return false;
    if (!(inRan(sentUp, pkt)))
        return false;
    if (!(!inRan(sentDown, pkt)))
        return false;
    if (!(!inRan(ndBuff, pkt)))
        return false;
    for (auto it = sentUp.begin(); it != sentUp.end(); ) it->second == pkt ? it = sentUp.erase(it) : ++it;
    return true;
}

bool Um2App::creatingDataPacket(Node x, int des, PktId pkt, Data data) {
    if (!((ND.count(x) > 0 && Dests.count(x) == 0)))
        return false;
    if (!(x == initialSrcAddr.at(pkt)))
        return false;
    if (!(des == finalDestAddr.at(pkt)))
        return false;
    if (!(pktFwdr.count(pkt) == 0))
        return false;
    if (!(pktData.count(pkt) == 0))
        return false;
    if (!(ndBuff.count({x, pkt}) == 0))
        return false;
    if (!(type.at(pkt) == DATA))
        return false;
    createdPkts.insert(pkt);
    pktFwdr[pkt] = x;
    pktData[pkt] = data;
    ndBuff.insert({x, pkt});
    return true;
}

}  // namespace eb_um2app
",
    "path": "Um2App.cc",
  },
  {
    "content": "import inet.applications.contract.IApp;

//
// Um2App — Generated by wsn-codegen from the Event-B refinement chain pM1 → uM2 (merged into one module).
// Do not edit by hand — regenerate instead.
// Shell modelled on INET's SensorApp: periodic sensing traffic toward
// sinkAddress over the bound networkProtocol. The C++ class binds via
// @class below.
//
simple Um2App like IApp
{
    parameters:
        @class(eb_um2app::Um2App);
        string sinkAddress = default("");         // destination; empty = passive (sink-side) node
        volatile double sensingInterval @unit(s) = default(1s);
        int payloadLength @unit(B) = default(10B);
        double startTime @unit(s) = default(uniform(0s, this.sensingInterval));
        double stopTime @unit(s) = default(-1s);  // negative: run forever
        string networkProtocol = default("");     // L3 protocol to bind; empty = no socket
        double stopOperationExtraTime @unit(s) = default(-1s);
        double stopOperationTimeout @unit(s) = default(2s);
        @display("i=block/app");
        @lifecycleSupport;
        @signal[packetSent](type=inet::Packet);
        @signal[packetReceived](type=inet::Packet);
        @statistic[packetSent](title="packets sent"; source=packetSent; record=count,"sum(packetBytes)","vector(packetBytes)"; interpolationmode=none);
        @statistic[packetReceived](title="packets received"; source=packetReceived; record=count,"sum(packetBytes)","vector(packetBytes)"; interpolationmode=none);
    gates:
        input socketIn @labels(ITransportPacket/up);
        output socketOut @labels(ITransportPacket/down);
}
",
    "path": "Um2App.ned",
  },
]
`;
